Added implementation of AbstractDataStore which provides base support for remote reading
  - started sample JUnit tests which shows initialization with client
  - DataStore is now just wrapper on top of RestconfClientImpl
  - Fixed creation of Restconf Paths from InstanceIdentifiers

Change-Id: I9cdc0dbe9eba3bfe3e0f21abb3c1e87692d88664
Signed-off-by: Tony Tkacik <ttkacik@cisco.com>